@@ -60,7 +60,7 @@ image_viewer_draw_image(ImageViewer *self)
 
         gtk_image_set_from_pixbuf(priv->image, priv->pixbuf);
 
-        if ((GTK_WIDGET_CAN_FOCUS(self)) && (!GTK_WIDGET_HAS_FOCUS(self)))
+        if ((gtk_widget_get_can_focus(GTK_WIDGET(self))) && (!gtk_widget_has_focus(GTK_WIDGET(self))))
                 gtk_widget_grab_focus(GTK_WIDGET(self));
 
         return;
@@ -246,7 +246,7 @@ image_viewer_init(ImageViewer *self)
         events_mask = events_mask | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK;
         gtk_widget_set_events(GTK_WIDGET(self), events_mask);
 
-        GTK_WIDGET_SET_FLAGS(self, GTK_CAN_FOCUS);
+	gtk_widget_set_can_focus(GTK_WIDGET(self), TRUE);
 
         gtk_widget_grab_focus(GTK_WIDGET(self));
         gtk_widget_set_sensitive(GTK_WIDGET(self), TRUE);
